--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mobikul_custom_app_bar
-description: "A new Flutter package project."
+description: "A customizable app bar widget for Flutter applications with dynamic headings, logo customization, and developer-friendly defaults."
 version: 0.0.1
 homepage: https://github.com/SocialMobikul/mobikul_custom_appbar
 
